--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "devDependencies": {
     "@babylonjs/core": "^5.24.0",
     "@babylonjs/inspector": "^5.24.0",
+    "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
