--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "Following a tutorial at https://doc.babylonjs.com/guidedLearning/createAGame/gettingSetUp",
   "main": "app.ts",
   "scripts": {
-	  "build": "webpack",
-	  "start": "webpack-dev-server --port 8080"
- },
+    "build": "webpack",
+    "start": "webpack-dev-server --port 8080"
+  },
   "author": "Robyn Drake",
   "license": "MIT",
   "devDependencies": {
     "@babylonjs/core": "^5.24.0",
     "@babylonjs/inspector": "^5.24.0",
     "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.20",
     "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
