--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.7.21",
     "express": "^4.18.1"
   }
 }
