--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@babylonjs/gui": "^5.25.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.21",
     "express": "^4.18.1"
